tests/unit/snapshots/unit__dto_property_profile__wasm_property_profile_with_schema_registry.snap
---
source: tests/unit/dto_property_profile.rs
expression: "serde_json::to_string_pretty(&serde_json::json!({\n    \"schemaVersion\": with_registry[\"schemaVersion\"], \"schemaApplications\":\n    applications,\n})).expect(\"stable JSON snapshot\")"
---
{
  "schemaApplications": [
    {
      "contractId": "wendao.capture.v1",
      "findings": [
        {
          "actual": null,
          "expected": [],
          "kind": "missingRequiredProperty",
          "message": "property schema `wendao.capture.v1` requires `CAPTURE_KIND`",
          "property": "CAPTURE_KIND",
          "source": {
            "end": {
              "column": 59,
              "line": 5
            },
            "rangeEnd": 154,
            "rangeStart": 114,
            "start": {
              "column": 19,
              "line": 5
            }
          }
        }
      ],
      "reference": {
        "kind": "macro",
        "normalized": "wendao.capture.v1",
        "raw": "{{{property_schema(wendao.capture.v1)}}}"
      },
      "scope": {
        "kind": "section",
        "level": 1,
        "outlinePath": [
          "Project"
        ],
        "title": "Project"
      },
      "source": {
        "end": {
          "column": 59,
          "line": 5
        },
        "rangeEnd": 154,
        "rangeStart": 114,
        "start": {
          "column": 19,
          "line": 5
        }
      }
    }
  ],
  "schemaVersion": 1
}
